--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,9 @@
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=hackernews
-
-
 #mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/hackernews?autoReconnect=true
 spring.datasource.username=root
-spring.datasource.password =omoto
+spring.datasource.password =password
+
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
